fix: dark mode is default theme

--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -7,6 +7,18 @@ body {
   scroll-behavior: smooth;
 }
 
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  html {
+    color-scheme: dark;
+  }
+}
+
 body {
   transition:
     background-color 0.5s ease,
